Log exception, and hide useless warning messages in the console